--- a/style.css
+++ b/style.css
@@ -147,3 +147,72 @@
     padding:10px 0;
     margin-bottom:0;
 }
+.social{
+    background-color:rgb(237, 200, 239);
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:400px;
+    /* height:300px; */
+}
+.social-media{
+    display:flex;
+    width:200px;
+    height:200px;
+    margin:auto;
+    background-color:rgb(237, 200, 239);
+    align-items: center;
+    justify-content: center;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    margin:0 50px 0 50px;
+    width: 20px;
+    height:10px;
+    font-size:larger;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand */
+  
+  /* Facebook */
+  .fa-facebook {
+    background: rgb(156, 121, 158);
+    color: white;
+    margin:30px;
+    padding:20px;
+  }
+  
+  /* Twitter */
+  .fa-twitter {
+    background: rgb(156, 121, 158);
+    color: white;
+    margin:30px;
+    padding:20px;
+  }
+  .fa-instagram {
+    background: rgb(156, 121, 158);
+    color: white;
+    margin:30px;
+    padding:20px;
+  }
+  .fa-linkedin {
+    background: rgb(156, 121, 158);
+    color: white;
+    margin:30px;
+    padding:20px;
+  }
+  
+  .fa-whatsapp {
+    background: rgb(156, 121, 158);
+    color: white;
+    margin:30px;
+    padding:20px;
+  }
