--- a/responsive.css
+++ b/responsive.css
@@ -1,66 +1,86 @@
-@media only screen and (max-width:600px){
-    .navbar{
-        display:flex;
-        /* flex-direction:column;
-        position:sticky; */
-        height:320px;
-        background-color:rgb(85, 2, 85);
-
+@media only screen and (max-width: 600px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
     }
 
- .leftnav{
-        display:flex;
-        flex-direction:column;
-        width:100%;
-        background-color:rgb(85, 2, 85);
-        text-align:left;
-       }
-       #search{
-        height:20px;
-        margin-top:10px;
-        border:2px solid rgb(85, 2, 85);
-    
+    .navbar-content {
+        width: 100%;
     }
-    
-    .btn{
-        height:23px;
-        width:50px;
-        margin-top:10px;
-        border:2px solid  rgb(85, 2, 85);
+
+    .menu-icon {
+        display: block;
+        font-size: 30px;
+        color: white;
+        cursor: pointer;
+        padding: 10px;
     }
-.grid-container{
-    display:grid;
-    grid-template-columns: auto auto auto;
-}
-.grid-items{
-    margin:8px;
-    padding:8px;
-    justify-content: center;
-    width:20%;
-}
-.grid-items img{
-    height:60px;
-     width:60px;
-    border-radius:60px;
-}
-.grid-items p{
-    color:white;
-    text-align:center;
-    font-size:large;
-}
-.firsthalf button{
-    height:20px;
-    width:70px;
-    margin-bottom:10px;
-    background-color: rgb(44, 149, 241);
-    color:white;
-    border:none;
-    font-size:10px;
 
+    .leftnav {
+        display: none; 
+        flex-direction: column;
+        width: 100%;
+        background-color: rgb(85, 2, 85);
+        padding: 10px 0;
+        list-style: none;
+        margin: 0;
+    }
+
+    .leftnav li {
+        margin: 10px 0;
+        text-align: center;
+    }
+
+    .leftnav li a {
+        color: white;
+        text-decoration: none;
+        font-size: 18px;
+        display: block;
+        padding: 10px;
+    }
+
+    #menu-toggle:checked ~ .navbar-content .leftnav {
+        display: flex; 
+    }
+
+    .rightnav {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    #search {
+        height: 20px;
+        margin-top: 0;
+    }
+
+    .btn {
+        height: 23px;
+        width: 50px;
+    }
+
+    .section {
+        padding: 10px;
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 10px;
+    }
+
+    .grid-items img {
+        height: 80px;
+        width: 80px;
+    }
+
+    .firsthalf button {
+        height: 30px;
+        width: 80px;
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
 }
-}
 
-
-
-
-/* 970px X  600px */
+/* 970px X600px */
