--- a/responsive.css
+++ b/responsive.css
@@ -1,13 +1,14 @@
 @media only screen and (max-width: 600px) {
     .navbar {
-        flex-direction: row;
+        flex-direction: column;
         align-items: flex-start;
         padding: 0;
-        height:70px;
-        width:100%;
     }
 
-    
+    .navbar-content {
+        width: 100%;
+    }
+
     .menu-icon {
         display: block;
         font-size: 30px;
@@ -46,14 +47,12 @@
     .rightnav {
         display: flex;
         width: 100%;
-        height:70px;
-        justify-content:right;
-        
+        justify-content: center;
+        margin-bottom: 10px;
     }
 
     #search {
         height: 20px;
-        width:90px;
         margin-top: 0;
     }
 
